      - Update URL to make use of https instead of http, when possible
  * debian/control:
      - Add lsb-base as dependency to package shadowsocks-libev, since
        the init script sources /lib/lsb/init-functions utility functions
      - Bump policy version to 3.9.8 (no actual change required)
  * debian/adjtimex.service:
      - Add documentation line. Thanks to lintian.

 -- Roger Shimizu <rogershimizu@gmail.com>  Tue, 28 Jun 2016 22:23:31 +0900

adjtimex (1.29-7) unstable; urgency=medium

  * remove the wrong debian/dirs line in changelog of previous version 1.29-6
  * debian/patches:
      - Replace patch 03 with the one by Bjarni I. Gislason, which also
        minimizes the time of lock over "/dev/rtc" (Closes: #724929).
      - Fix potential uninitialized memory accessing
        (thanks peppe <g1pi@libero.it>, Closes: #688933).
      - Avoid a few gcc warnings
  * debian/copyright: Add copyright for newly added patch
  * debian/adjtimexconfig:
      - Move tmp file during executing from /etc to /tmp.
      - Code clean up.
  * debian/templates + debian/config + debian/po + debian/NEWS:
      - Remove the debconf whether to start adjtimex on startup, which now
        depends on the existence of /etc/default/adjtimex file. By default,
        there's no /etc/default/adjtimex, which is generated by running:
        adjtimexconfig.
      - adjtimexconfig is still a choice in defconf, but change to false by
        default because it takes 70 seconds to excute on install/upgrade.
  * debian/postinst:
      - Refrain from running adjtimexconfig on configure, which is triggered by
        each install/upgrade
      - Refrain from starting adjtimex service on configure (Closes: #785208).
      - Code clean up.
  * debian/postrm:
      - Code clean up.
  * debian/adjtimex.init + debian/adjtimex.service: Start adjtimex service
      on startup only if config file /etc/default/adjtimex is ready.
  * debian/adjtimexconfig.8: Update man page
