@@ -1,9 +1,10 @@
 #!/usr/bin/make -f
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+#export DH_VERBOSE = 1
 
+# Security Hardening
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/buildflags.mk
 
 override_dh_clean:
 	[ ! -f Makefile ] || make veryclean
@@ -12,9 +13,6 @@ override_dh_clean:
 		config.h config.h.in
 
 override_dh_auto_install:
-
-override_dh_installchangelogs:
-	dh_installchangelogs ChangeLog
 
 override_dh_installinit:
 	dh_installinit -n
